--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,7 +1,7 @@
 monitor=,preferred,auto,auto
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = rofi -show drun
 
 source=~/.config/hypr/animations.conf
 source=~/.config/hypr/envs.conf
