Add tmux-tutorial and add code as keybinding

--- a/hypr/.config/hypr/keybindings.conf
+++ b/hypr/.config/hypr/keybindings.conf
@@ -7,7 +7,8 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo,
-bind = $mainMod, J, togglesplit,
+bind = $mainMod, A, exec, kitty ~/ncpamixer
+bind = $mainMod, C, exec, code
 
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
