--- a/hypr/.config/hypr/keybindings.conf
+++ b/hypr/.config/hypr/keybindings.conf
@@ -9,6 +9,7 @@ bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo,
 bind = $mainMod, A, exec, kitty ~/ncpamixer
 bind = $mainMod, C, exec, code
+bind = $mainMod, G, exec, google-chrome-stable
 
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
