Add keybinds for movoing between workspaces

--- a/hypr/.config/hypr/keybindings.conf
+++ b/hypr/.config/hypr/keybindings.conf
@@ -4,10 +4,10 @@ source=~/.config/hypr/keybindings/workspace.conf
 
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
+bind = $mainMod, DELETE, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, space, exec, $menu
+bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo,
 bind = $mainMod, A, exec, kitty ~/ncpamixer
 bind = $mainMod, C, exec, code
