--- a/hypr/.config/hypr/keybindings/workspace.conf
+++ b/hypr/.config/hypr/keybindings/workspace.conf
@@ -1,3 +1,4 @@
+# move to other workspace
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -9,6 +10,10 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
+bind = $mainMod, M, workspace, +1
+bind = $mainMod, code:59, workspace, -1
+
+# move windows to other workspace
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
