--- a/hypr/.config/hypr/keybindings/workspace.conf
+++ b/hypr/.config/hypr/keybindings/workspace.conf
@@ -10,8 +10,8 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-bind = $mainMod, M, workspace, +1
-bind = $mainMod, code:59, workspace, -1
+bind = $mainMod, M, workspace, -1
+bind = $mainMod, code:59, workspace, +1
 
 # move windows to other workspace
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
