--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -14,3 +14,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'aserowy/tmux.nvim'
 
 run '~/.config/tmux/plugins/tpm/tpm'
+
+set -g @catppuccin_flavor 'mocha'
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
