--- a/hypr/.config/hypr/keybindings.conf
+++ b/hypr/.config/hypr/keybindings.conf
@@ -23,10 +23,15 @@ bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 bindm = $mainMod, mouse:272, movewindow
 
-binde = $mainMod SHIFT, h, resizeactive, -10 0
-binde = $mainMod SHIFT, j, resizeactive, 0 10
-binde = $mainMod SHIFT, k, resizeactive, 0 -10
-binde = $mainMod SHIFT, l, resizeactive, 10 0
+binde = $mainMod SHIFT, h, resizeactive, -25 0
+binde = $mainMod SHIFT, j, resizeactive, 0 25
+binde = $mainMod SHIFT, k, resizeactive, 0 -25
+binde = $mainMod SHIFT, l, resizeactive, 25 0
+
+binde = $mainMod CTRL, h, resizeactive, -10 0
+binde = $mainMod CTRL, j, resizeactive, 0 10
+binde = $mainMod CTRL, k, resizeactive, 0 -10
+binde = $mainMod CTRL, l, resizeactive, 10 0
 
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
