--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -10,7 +10,8 @@ window_padding_width 10
 ## upstream: https://github.com/catppuccin/kitty/blob/main/themes/mocha.conf
 ## blurb:    Soothing pastel theme for the high-spirited!
 
-
+font_family 0xProto Nerd Font
+font_size 13
 
 # The basic colors
 foreground              #cdd6f4
