Change layout-config of hyprland

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -10,18 +10,19 @@ source=~/.config/hypr/windowrules.conf
 source=~/.config/hypr/auto-start.conf
 source=~/.config/hypr/style.conf
 
-dwindle {
-    pseudotile = true
-    preserve_split = true
+general {
+  layout = master
 }
 
 master {
-    new_status = master
+  orientation = center
+  mfact = 0.45
+  slave_count_for_center_master = 0
 }
 
-misc {
-    force_default_wallpaper = -1
-    disable_hyprland_logo = false
+dwindle {
+    pseudotile = true
+    preserve_split = true
 }
 
 input {
@@ -40,12 +41,7 @@ input {
     }
 }
 
-gestures {
-    workspace_swipe = false
-}
-
 device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
+    name = razer-razer-basilisk-v3-pro
+    sensitivity = -0.2
 }
-
