Outsource some configurations

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -14,34 +14,10 @@ general {
   layout = master
 }
 
-master {
-  orientation = center
-  mfact = 0.45
-  slave_count_for_center_master = 0
-}
-
-dwindle {
-    pseudotile = true
-    preserve_split = true
-}
-
-input {
-    kb_layout = us
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
-
-    follow_mouse = 1
-
-    sensitivity = 0
-
-    touchpad {
-        natural_scroll = false
-    }
-}
-
 device {
     name = razer-razer-basilisk-v3-pro
     sensitivity = -0.2
 }
+
+source=~/.config/hypr/input.conf
+source=~/.config/hypr/custom.conf
