--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,17 +1,22 @@
-monitor=,preferred,auto,auto
 $terminal = kitty
 $fileManager = dolphin
 $menu = rofi -show drun
 
-source=~/.config/hypr/animations.conf
 source=~/.config/hypr/envs.conf
-source=~/.config/hypr/keybindings.conf
-source=~/.config/hypr/windowrules.conf
 source=~/.config/hypr/auto-start.conf
-source=~/.config/hypr/style.conf
 
-source=~/.config/hypr/input.conf
-source=~/.config/hypr/custom.conf
+# navigation
+source=~/.config/hypr/keybindings.conf
+source=~/.config/hypr/input.conf 		# User-Configurations
+
+# style
+source=~/.config/hypr/style.conf
+source=~/.config/hypr/animations.conf
+source=~/.config/hypr/windowrules.conf
+
+# custom
+source=~/.config/hypr/custom.conf		# User-Configurations
+
 
 general {
   layout = master
