Add missing config-files

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -8,11 +8,13 @@ source=~/.config/hypr/auto-start.conf
 # navigation
 source=~/.config/hypr/keybindings.conf
 source=~/.config/hypr/input.conf 		# User-Configurations
+source=~/.config/hypr/devices.conf		# User-Configurations
 
 # style
 source=~/.config/hypr/style.conf
 source=~/.config/hypr/animations.conf
 source=~/.config/hypr/windowrules.conf
+source=~/.config/hypr/layout.conf
 
 # custom
 source=~/.config/hypr/custom.conf		# User-Configurations
