Add install.sh script and some hyprland-script

--- a/hypr/.config/hypr/auto-start.conf
+++ b/hypr/.config/hypr/auto-start.conf
@@ -1,3 +1,6 @@
 exec-once = eww daemon
 exec-once = waybar
 exec-once = hyprpm reload -n
+
+#scripts
+exec-once = sh ~/.config/hypr/scripts/eventListener.sh
