--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,3 +1,5 @@
+set-option -g mouse on
+
 unbind C-b
 unbind C-l
 
@@ -17,3 +19,5 @@ run '~/.config/tmux/plugins/tpm/tpm'
 
 set -g @catppuccin_flavor 'mocha'
 run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
