--- a/hypr/.config/hypr/keybindings/layout.conf
+++ b/hypr/.config/hypr/keybindings/layout.conf
@@ -1,10 +1,10 @@
-bind = $mainMod, code:61, layoutmsg, focusmaster master
+bind = $mainMod, code:34, layoutmsg, focusmaster master # [
 
 bind = $mainMod, P, layoutmsg, cyclenext
 bind = $mainMod, U, layoutmsg, cycleprev
 
 
-bind = $mainMod SHIFT, code:61, layoutmsg, swapwithmaster master
+bind = $mainMod SHIFT, code:34, layoutmsg, swapwithmaster master # SHIFT + [
 
 bind = $mainMod SHIFT, P, layoutmsg, swapnext
 bind = $mainMod SHIFT, U, layoutmsg, swapprev
