Change small things

--- a/hypr/.config/hypr/auto-start.conf
+++ b/hypr/.config/hypr/auto-start.conf
@@ -2,5 +2,5 @@ exec-once = eww daemon
 exec-once = waybar
 exec-once = hyprpm reload -n
 
-#scripts
-exec-once = sh ~/.config/hypr/scripts/eventListener.sh
+# scripts
+# exec-once = sh ~/.config/hypr/scripts/eventListener.sh
