--- a/hypr/.config/hypr/keybindings/window.conf
+++ b/hypr/.config/hypr/keybindings/window.conf
@@ -7,3 +7,8 @@ binde = $mainMod SHIFT, h, resizeactive, -25 0
 binde = $mainMod SHIFT, j, resizeactive, 0 25
 binde = $mainMod SHIFT, k, resizeactive, 0 -25
 binde = $mainMod SHIFT, l, resizeactive, 25 0
+
+bind = $mainMod, F, togglefloating
+
+bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod, mouse:273, resizewindow
