Add kb_layout switch-submap

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,6 +1,7 @@
 $terminal = kitty
 $fileManager = dolphin
 $menu = rofi -show drun
+$mainMod = SUPER
 
 source=~/.config/hypr/envs.conf
 source=~/.config/hypr/auto-start.conf
