Change some small things

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,6 +1,8 @@
 $terminal = kitty
 $fileManager = dolphin
 $menu = rofi -show drun
+$musicPlayerProzess = spotify
+$musicPlayerCommand = spotify-launcher
 $mainMod = SUPER
 
 source=~/.config/hypr/envs.conf
