--- a/hypr/.config/hypr/keybindings/multimedia.conf
+++ b/hypr/.config/hypr/keybindings/multimedia.conf
@@ -5,7 +5,9 @@ bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
+$playStopPlayer = if ! pgrep -x spotify > /dev/null; then spotify-launcher >/dev/null 2>&1 & until pgrep -x spotify > /dev/null && playerctl status > /dev/null 2>&1; do sleep 1; done; fi; playerctl play-pause
+
 bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
+bindl = , XF86AudioPause, exec, $playStopPlayer
+bindl = , XF86AudioPlay, exec, $playStopPlayer
 bindl = , XF86AudioPrev, exec, playerctl previous
