--- a/hypr/.config/hypr/keybindings.conf
+++ b/hypr/.config/hypr/keybindings.conf
@@ -7,4 +7,6 @@ source=~/.config/hypr/keybindings/multimedia.conf
 source=~/.config/hypr/keybindings/applications.conf
 source=~/.config/hypr/keybindings/layout.conf
 
+source=~/.config/hypr/keybindings/screenshot.conf
+
 source=~/.config/hypr/keybindings/custom.conf
