--- a/hypr/.config/hypr/hyprlock.conf
+++ b/hypr/.config/hypr/hyprlock.conf
@@ -1,7 +1,7 @@
 source = $HOME/.config/hypr/mocha.conf
 
-$accent = $mauve
-$accentAlpha = $mauveAlpha
+$accent = $overlay0
+$accentAlpha = $overlay0Alpha
 $font = JetBrainsMono Nerd Font
 
 # GENERAL
@@ -14,14 +14,14 @@ background {
   monitor =
   path = $HOME/.config/background.png
   blur_passes = 0
-  color = $base
+  color = $crust
 }
 
 # LAYOUT
 label {
   monitor =
   text = Layout: $LAYOUT
-  color = $text
+  color = $overlay0
   font_size = 25
   font_family = $font
   position = 30, -30
@@ -29,35 +29,11 @@ label {
   valign = top
 }
 
-# TIME
-label {
-  monitor =
-  text = $TIME
-  color = $text
-  font_size = 90
-  font_family = $font
-  position = -30, 0
-  halign = right
-  valign = top
-}
-
-# DATE
-label {
-  monitor =
-  text = cmd[update:43200000] date +"%A, %d %B %Y"
-  color = $text
-  font_size = 25
-  font_family = $font
-  position = -30, -150
-  halign = right
-  valign = top
-}
-
 # FINGERPRINT
 {
   monitor = "";
   text = "$FPRINTPROMPT";
-  color = "$text";
+  color = "$overlay0";
   font_size = 14;
   font_family = $font;
   position = "0, -107";
@@ -70,7 +46,7 @@ image {
   monitor =
   path = $HOME/.face
   size = 100
-  border_color = $accent
+  border_color = $overlay0
   position = 0, 75
   halign = center
   valign = center
@@ -84,13 +60,13 @@ input-field {
   dots_size = 0.2
   dots_spacing = 0.2
   dots_center = true
-  outer_color = $accent
+  outer_color = $overlay0
   inner_color = $surface0
-  font_color = $text
+  font_color = $overlay0
   fade_on_empty = false
-  placeholder_text = <span foreground="##$textAlpha"><i>󰌾 Logged in as </i><span foreground="##$accentAlpha">$USER</span></span>
+  placeholder_text = <span foreground="##$overlay0Alpha"><i>󰌾 Logged in as </i><span foreground="##$accentAlpha">$USER</span></span>
   hide_input = false
-  check_color = $accent
+  check_color = $overlay0
   fail_color = $red
   fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
   capslock_color = $yellow
@@ -98,3 +74,4 @@ input-field {
   halign = center
   valign = center
 }
+
