--- a/hypr/.config/hypr/keybindings.conf
+++ b/hypr/.config/hypr/keybindings.conf
@@ -1,6 +1,8 @@
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
+bind = $mainMod, L, exec, hyprlock
+
 source=~/.config/hypr/keybindings/window.conf
 source=~/.config/hypr/keybindings/workspace.conf
 source=~/.config/hypr/keybindings/multimedia.conf
