Change keybinding of hyprlock

--- a/hypr/.config/hypr/keybindings.conf
+++ b/hypr/.config/hypr/keybindings.conf
@@ -1,7 +1,7 @@
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
-bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, BACKSPACE, exec, hyprlock
 
 source=~/.config/hypr/keybindings/window.conf
 source=~/.config/hypr/keybindings/workspace.conf
