--- a/hypr/.config/hypr/auto-start.conf
+++ b/hypr/.config/hypr/auto-start.conf
@@ -1,5 +1,6 @@
 exec-once = eww daemon
 exec-once = waybar
+exec-once = dunst
 
 # scripts
 # exec-once = sh ~/.config/hypr/scripts/eventListener.sh
