Add bitwarden key

--- a/hypr/.config/hypr/keybindings/applications.conf
+++ b/hypr/.config/hypr/keybindings/applications.conf
@@ -8,3 +8,4 @@ bind = $mainMod, P, pseudo,
 bind = $mainMod, A, exec, kitty ~/ncpamixer
 bind = $mainMod, C, exec, code
 bind = $mainMod, G, exec, google-chrome-stable
+bind = $mainMod, B, exec, bitwarden-desktop
