Add bluetui keybinding

--- a/hypr/.config/hypr/keybindings/applications.conf
+++ b/hypr/.config/hypr/keybindings/applications.conf
@@ -8,4 +8,5 @@ bind = $mainMod, P, pseudo,
 bind = $mainMod, A, exec, kitty ~/ncpamixer
 bind = $mainMod, C, exec, code
 bind = $mainMod, G, exec, google-chrome-stable
-bind = $mainMod, B, exec, bitwarden-desktop
+bind = $mainMod, W, exec, bitwarden-desktop
+bind = $mainMod, B, exec, kitty bluetui
