--- a/hypr/.config/hypr/input.conf
+++ b/hypr/.config/hypr/input.conf
@@ -1,8 +1,8 @@
 input {
-    kb_layout = us
+    kb_layout = us,de
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = grp:rctrl_rshift_toggle
     kb_rules =
 
     follow_mouse = 1
