--- a/hypr/.config/hypr/keybindings/multimedia.conf
+++ b/hypr/.config/hypr/keybindings/multimedia.conf
@@ -1,5 +1,5 @@
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = ,XF86AudioRaiseVolume, exec, playerctl volume 0.05+
+bindel = ,XF86AudioLowerVolume, exec, playerctl volume 0.05-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
