Fix fastfetch on clear

--- a/hypr/.config/hypr/keybindings/applications.conf
+++ b/hypr/.config/hypr/keybindings/applications.conf
@@ -5,7 +5,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo,
-bind = $mainMod, A, exec, kitty ~/ncpamixer
+bind = $mainMod, A, exec, kitty ncpamixer
 bind = $mainMod, C, exec, code
 bind = $mainMod, G, exec, google-chrome-stable
 bind = $mainMod, W, exec, bitwarden-desktop
