--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,5 +1,5 @@
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = nautilus
 $menu = rofi -show drun
 $musicPlayerProzess = spotify
 $musicPlayerCommand = spotify-launcher
