Add wallpaper and make some fixes in reference to intellij

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -19,6 +19,9 @@ source=~/.config/hypr/style.conf
 source=~/.config/hypr/animations.conf
 source=~/.config/hypr/windowrules.conf
 
+# other
+source=~/.config/hypr/intellij-fixes.conf
+
 # custom
 source=~/.config/hypr/custom.conf		# User-Configurations
 
