--- a/hypr/.config/hypr/auto-start.conf
+++ b/hypr/.config/hypr/auto-start.conf
@@ -1,6 +1,7 @@
 exec-once = eww daemon
 exec-once = waybar
 exec-once = dunst
+exec-once = wpaperd
 
 # scripts
 # exec-once = sh ~/.config/hypr/scripts/eventListener.sh
