Add naps2 (scanning-software)

--- a/hypr/.config/hypr/keybindings.conf
+++ b/hypr/.config/hypr/keybindings.conf
@@ -1,6 +1,8 @@
 bind = $mainMod, S, togglespecialworkspace, magic
 bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
+bind = $mainMod ALT, 0, exec, hyprpicker -a
+
 bind = $mainMod, BACKSPACE, exec, hyprlock
 
 source=~/.config/hypr/keybindings/window.conf
