Fix JSON formatting and add opacity setting

--- a/windows-terminal-settings.json
+++ b/windows-terminal-settings.json
@@ -38,7 +38,8 @@
             "font": 
             {
                 "face": "0xProto Nerd Font Mono"
-            }
+            },
+            "opacity": 90
         },
         "list": 
         [
