--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -21,6 +21,7 @@ source=~/.config/hypr/windowrules.conf
 
 # other
 source=~/.config/hypr/intellij-fixes.conf
+source=~/.config/hypr/screensharing.conf
 
 # custom
 source=~/.config/hypr/custom.conf		# User-Configurations
