--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -10,6 +10,8 @@ bind -n C-j select-pane -D
 bind -n C-k select-pane -U
 bind -n C-l select-pane -R
 
+bind ? split-window -h "exec tmux list-keys | less"
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
@@ -18,9 +20,9 @@ set -g @catppuccin_flavor 'mocha'
 
 set -g @plugin 'aserowy/tmux.nvim'
 
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+
 run '~/.config/tmux/plugins/tpm/tpm'
 
-set -g @catppuccin_flavor 'mocha'
-run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
-
-set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set-option -g @tmux-autoreload-configs '~/.config/tmux/tmux.conf'
+run-shell '~/.config/tmux/manual-managed-plugins/tmux-autoreload/tmux-autoreload.tmux'
