--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,9 +1,8 @@
 set-option -g mouse on
+set-option -g prefix C-_
 
 unbind C-b
 unbind C-l
-
-set-option -g prefix C-_
 
 bind -n C-h select-pane -L
 bind -n C-j select-pane -D
@@ -17,6 +16,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'catppuccin/tmux#v2.1.3'
 set -g @catppuccin_flavor 'mocha'
+set -g @catppuccin_window_text "#W"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_text "#W"
 
 set -g @plugin 'aserowy/tmux.nvim'
 
@@ -26,3 +28,4 @@ run '~/.config/tmux/plugins/tpm/tpm'
 
 set-option -g @tmux-autoreload-configs '~/.config/tmux/tmux.conf'
 run-shell '~/.config/tmux/manual-managed-plugins/tmux-autoreload/tmux-autoreload.tmux'
+
