--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -21,6 +21,21 @@ set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_text "#W"
 
 set -g @plugin 'aserowy/tmux.nvim'
+set -g @tmux-nvim-navigation true
+set -g @tmux-nvim-navigation-cycle true
+set -g @tmux-nvim-navigation-keybinding-left 'C-h'
+set -g @tmux-nvim-navigation-keybinding-down 'C-j'
+set -g @tmux-nvim-navigation-keybinding-up 'C-k'
+set -g @tmux-nvim-navigation-keybinding-right 'C-l'
+# resize
+set -g @tmux-nvim-resize true
+set -g @tmux-nvim-resize-step-x 1
+set -g @tmux-nvim-resize-step-y 1
+set -g @tmux-nvim-resize-keybinding-left 'M-h'
+set -g @tmux-nvim-resize-keybinding-down 'M-j'
+set -g @tmux-nvim-resize-keybinding-up 'M-k'
+set -g @tmux-nvim-resize-keybinding-right 'M-l'
+
 
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 
