Set yazi as explorer

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,8 +1,6 @@
 $terminal = kitty
-$fileManager = nautilus
+$fileManager = yazi
 $menu = rofi -show drun
-$musicPlayerProzess = spotify
-$musicPlayerCommand = spotify-launcher
 $mainMod = SUPER
 
 source=~/.config/hypr/envs.conf
