--- a/hypr/.config/hypr/keybindings/applications.conf
+++ b/hypr/.config/hypr/keybindings/applications.conf
@@ -1,7 +1,7 @@
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, DELETE, exit,
-bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, E, exec, $terminal $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, P, pseudo,
